2007-05-07 Mathieu Blondel <mblondel@users.sourceforge.net>

- Updated web site (local link to python fuse bindings).

2007-04-01 Neil Harris <neil@tonal.clara.co.uk>

- Fixed a long-standing problem in writing to pages with hidden deleted
revisions.

2006-10-09 Mathieu Blondel <mblondel@users.sourceforge.net>

- Fixed bug when using non-ascii characters in config file.

2006-09-04 Mathieu Blondel <mblondel@users.sourceforge.net>

- Added man page. Removed some informations from the README
and referred users to the man page for easier maintenance.

=== WikipediaFS 0.2 ===

2006-06-21 Dave Holland <dave@biff.org.uk>

- http_proxy environment variable support.

2006-06-21 Mathieu Blondel <mblondel@users.sourceforge.net>

- Fixed bug that prevented from adding a new article.

=== WikipediaFS 0.1 ===

2006-06-11 Mathieu Blondel <mblondel@users.sourceforge.net>

- Updated site.
- Added make_release.sh.

2006-06-10 Mathieu Blondel <mblondel@users.sourceforge.net>

- Switched to Sourceforge Subversion.

2006-06-09 Mathieu Blondel <mblondel@users.sourceforge.net>

- Fixed a bug with statfs.
- Removed the <at-startup> tag (useless).
- Removed the ability to mkdir wikipedia-xx (difficult bug).
- Now gets "Unknown file or directory" if one article does not exist.

2006-06-08 Mathieu Blondel <mblondel@users.sourceforge.net>

- Reorganized source tree.
- Created setup.py.
- Created mount.wikipediafs.
- Made it work with fstab.
- Cleaned and cleared README.
- Create a logging system.

2005-03-22 Jean-Denis Vauguet <jd_@users.sourceforge.net>

- Added a <at-startup> tag in config.xml to tell whether to mount a site.
- Added full mkdir command.
- Added full rmdir / rm -rf command.

2005-03-22 Jean-Denis Vauguet <jd_@users.sourceforge.net>

- An edit summary feature is now available.

2005-03-20 Mathieu Blondel <mblondel@users.sourceforge.net>

- Added configuration and login. 

2005-03-16 Mathieu Blondel <mblondel@users.sourceforge.net>
