@@ -1,3 +1,7 @@
+2007-05-14 Mathieu Blondel <mblondel@users.sourceforge.net>
+
+- Rewrote code concerning config file and moved it to config.py.
+
 2007-05-07 Mathieu Blondel <mblondel@users.sourceforge.net>
 
 - Updated web site (local link to python fuse bindings).
